--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Biao WANG / Academic Personal Page"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Biao WANG"
 description              : &description "personal description"
-url                      : https://wangbiao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://biaowang225.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/wangbiao.github.io"
+repository               : "academicpages/biaowang225.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
