--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Biao WANG"
   avatar           : "http://img.mp.itc.cn/upload/20170510/99afee35a29c4ac4aa7a34cd91374612.jpg"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Director of Inudstry Vision Intelligence Team, DAMO Academy, Alibaba"
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
