--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Biao WANG / DAMO Academy, Alibaba Group"
+title                    : "Biao WANG / Vision AI Researcher"
 title_separator          : "-"
 name                     : &name "Biao WANG"
 description              : &description "personal description"
