--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Biao WANG \ wangbiao225 at foxmail dot com"
+  name             : "Biao WANG"
   avatar           : "http://img.mp.itc.cn/upload/20170510/99afee35a29c4ac4aa7a34cd91374612.jpg"
-  bio              : "Director of Inudstry Vision Intelligence Team, DAMO Academy, Alibaba"
+  bio              : "wangbiao225@foxmail.com \Director of Inudstry Vision Intelligence Team, DAMO Academy, Alibaba"
   location         : "Beijing, China"
   employer         :
   pubmed           : 
