--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Biao WANG"
   avatar           : "http://img.mp.itc.cn/upload/20170510/99afee35a29c4ac4aa7a34cd91374612.jpg"
-  bio              : "wangbiao225@foxmail.com \ Director of Inudstry Vision Intelligence Team, DAMO Academy, Alibaba"
+  bio              : "wangbiao225@foxmail.com \ \ Director of Industry Visual Intelligence TEAM, DAMO Academy, Alibaba"
   location         : "Beijing, China"
   employer         :
   pubmed           : 
