--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Biao WANG"
   avatar           : "http://img.mp.itc.cn/upload/20170510/99afee35a29c4ac4aa7a34cd91374612.jpg"
-  bio              : "wangbiao225@foxmail.com \ \ Director of Industry Visual Intelligence TEAM, DAMO Academy, Alibaba"
+  bio              : "Director of Industry Visual Intelligence TEAM, DAMO Academy, Alibaba"
   location         : "Beijing, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=Ltq_kHEAAAAJ&hl=zh-CN"
-  email            :
+  email            : "wangbiao225@foxmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
