--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Biao WANG (汪 彪)"
+title                    : "Biao WANG 汪 彪"
 title_separator          : "-"
 name                     : &name "Biao WANG"
 description              : &description "personal description"
